fix: typo fixes and adding codespell pre-commit hook

--- a/ProteinMPNN/colab_notebooks/quickdemo.ipynb
+++ b/ProteinMPNN/colab_notebooks/quickdemo.ipynb
@@ -132,7 +132,7 @@
         "\n",
         "1) pdb: 6MRR, homomer: False, designed_chain: A\n",
         "\n",
-        "2) pdb: 1O91, homomer: True, designed_chain: A B C, for correct symmetric tying lenghts of homomer chains should be the same"
+        "2) pdb: 1O91, homomer: True, designed_chain: A B C, for correct symmetric tying lengths of homomer chains should be the same"
       ],
       "metadata": {
         "id": "bgRXscTaYuqM"
@@ -198,7 +198,7 @@
         "chain_list = list(set(designed_chain_list + fixed_chain_list))\n",
         "\n",
         "#@markdown - specified which chain(s) to design and which chain(s) to keep fixed. \n",
-        "#@markdown   Use comma:`A,B` to specifiy more than one chain\n",
+        "#@markdown   Use comma:`A,B` to specify more than one chain\n",
         "\n",
         "#chain = \"A\" #@param {type:\"string\"}\n",
         "#pdb_path_chains = chain\n",
@@ -214,7 +214,7 @@
         "\n",
         "\n",
         "save_score=0                      # 0 for False, 1 for True; save score=-log_prob to npy files\n",
-        "save_probs=0                      # 0 for False, 1 for True; save MPNN predicted probabilites per position\n",
+        "save_probs=0                      # 0 for False, 1 for True; save MPNN predicted probabilities per position\n",
         "score_only=0                      # 0 for False, 1 for True; score input backbone-sequence pairs\n",
         "conditional_probs_only=0          # 0 for False, 1 for True; output conditional probabilities p(s_i given the rest of the sequence and backbone)\n",
         "conditional_probs_only_backbone=0 # 0 for False, 1 for True; if true output conditional probabilities p(s_i given backbone)\n",
@@ -390,7 +390,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown ### Amino acid probabilties\n",
+        "#@markdown ### Amino acid probabilities\n",
         "import plotly.express as px\n",
         "fig = px.imshow(np.exp(all_log_probs_concat).mean(0).T,\n",
         "                labels=dict(x=\"positions\", y=\"amino acids\", color=\"probability\"),\n",
@@ -509,7 +509,7 @@
         }
       ],
       "source": [
-        "#@markdown ### Sampling temperature adjusted amino acid probabilties\n",
+        "#@markdown ### Sampling temperature adjusted amino acid probabilities\n",
         "import plotly.express as px\n",
         "fig = px.imshow(all_probs_concat.mean(0).T,\n",
         "                labels=dict(x=\"positions\", y=\"amino acids\", color=\"probability\"),\n",
