--- a/ProteinMPNN/colab_notebooks/quickdemo_wAF2.ipynb
+++ b/ProteinMPNN/colab_notebooks/quickdemo_wAF2.ipynb
@@ -22,7 +22,7 @@
         "Examples: \n",
         "1.   pdb: `6MRR`, homomer: `False`, designed_chain: `A`\n",
         "2.   pdb: `1X2I`, homomer: `True`, designed_chain: `A,B` \n",
-        "     (for correct symmetric tying lenghts of homomer chains should be the same)"
+        "     (for correct symmetric tying lengths of homomer chains should be the same)"
       ]
     },
     {
@@ -148,7 +148,7 @@
         "chain_list = list(set(designed_chain_list + fixed_chain_list))\n",
         "\n",
         "#@markdown - specified which chain(s) to design and which chain(s) to keep fixed. \n",
-        "#@markdown   Use comma:`A,B` to specifiy more than one chain\n",
+        "#@markdown   Use comma:`A,B` to specify more than one chain\n",
         "\n",
         "#chain = \"A\" #@param {type:\"string\"}\n",
         "#pdb_path_chains = chain\n",
@@ -164,7 +164,7 @@
         "\n",
         "\n",
         "save_score=0                      # 0 for False, 1 for True; save score=-log_prob to npy files\n",
-        "save_probs=0                      # 0 for False, 1 for True; save MPNN predicted probabilites per position\n",
+        "save_probs=0                      # 0 for False, 1 for True; save MPNN predicted probabilities per position\n",
         "score_only=0                      # 0 for False, 1 for True; score input backbone-sequence pairs\n",
         "conditional_probs_only=0          # 0 for False, 1 for True; output conditional probabilities p(s_i given the rest of the sequence and backbone)\n",
         "conditional_probs_only_backbone=0 # 0 for False, 1 for True; if true output conditional probabilities p(s_i given backbone)\n",
